--- a/exp17/config/exp17_10.yaml
+++ b/exp17/config/exp17_10.yaml
@@ -28,6 +28,8 @@ algo:
   gamma: 0.95
   use_basestock_wrapper: False
   use_const_state: False
+  budget_estimation_episodes: 100
+  budget_dual_stepsize: 0.1
 
 # Chenyi provides this configuration
 env:
@@ -51,7 +53,7 @@ env:
   holding_cost:
     - 1
   lost_sale_cost: 
-    - 3
+    - 3             # Initial lost sale
   fixed_order_cost:
     - 3
   perish_cost:
@@ -62,4 +64,6 @@ env:
   action_space_size: 10
   demand_type: uniform
   max_demand: 10
+  # perished_quantity, lost_quantity
   budget: lost_quantity
+  target_budget_discount: 10
