--- a/exp22/config/exp22_eval.yaml
+++ b/exp22/config/exp22_eval.yaml
@@ -24,7 +24,7 @@ algo:
   log_interval: 20
   eval_interval: 10000
   no_term: True
-  evaluate_steps: 60000
+  evaluate_steps: 1000
   gamma: 0.95
   use_basestock_wrapper: False
   use_const_state: False
@@ -69,4 +69,5 @@ env:
   max_demand: 10
   # perished_quantity, lost_quantity
   budget: lost_quantity
-  target_budget_discount: 200
+  target_budget_discount: 400
+  parallel: False
