--- a/exp26/config/exp26_40.yaml
+++ b/exp26/config/exp26_40.yaml
@@ -24,20 +24,21 @@ algo:
   log_interval: 20
   eval_interval: 10000
   no_term: True
-  evaluate_steps: 10000
+  evaluate_steps: 60000
   gamma: 0.95
   use_basestock_wrapper: False
   use_const_state: False
   budget_estimation_episodes: 20
   budget_dual_stepsize: 0.1
 
+# Chenyi provides this configuration
 env:
-  num_parallel_envs: 20   # This should equal num_product
+  num_parallel_envs: 10   # This should equal num_product
   name: MultipleSKUEnv
   state_dtype: float32
   encoder: MLP
   seed: 0
-  num_product: 20
+  num_product: 10
   product_lifetime: 
     - 5
   max_lead_time: 
@@ -69,4 +70,3 @@ env:
   # perished_quantity, lost_quantity
   budget: lost_quantity
   target_budget_discount: 40
-  parallel: True
