--- a/exp31/config/default.yaml
+++ b/exp31/config/default.yaml
@@ -32,15 +32,15 @@ algo:
   budget_dual_stepsize: 0.01
 
 env:
-  num_parallel_envs: 100        # This should equal to num_product
+  num_parallel_envs: 20         # This should equal to num_product, i.e., N
   name: MultipleSKUEnv
   state_dtype: float32
   encoder: MLP
   seed: 0
-  num_product: 100              # The number of SKUs
-  product_lifetime: 
+  num_product: 20               # The number of SKUs, i.e., N
+  product_lifetime:             # i.e., P
     - 5
-  max_lead_time: 
+  max_lead_time:                # i.e., L
     - 4 
   arrival_prob:
     - 1
@@ -48,8 +48,6 @@ env:
     - 0.6
     - 0.4
     - 0.2
-  max_demand:
-    - 10
   holding_cost:                 # Sample from this range
     - 0.5
     - 1.5
@@ -67,4 +65,4 @@ env:
   demand_type: uniform
   max_demand: 10
   budget: lost_quantity         # Options: perished_quantity/lost_quantity
-  target_budget_discount: 40    # Options: 20/30/40
+  target_budget_discount: 30    # Options: 20/30/40; This is the average budget - same used for different #SKUs
